--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <module>vulpes-test-kit</module>
         <module>vulpes-jdbc-server-mysql</module>
         <module>vulpes-launcher</module>
+        <module>vulpes-benchmark</module>
+        <module>vulpes-catalog</module>
     </modules>
 
     <properties>
@@ -30,6 +32,7 @@
         <log4j.version>2.20.0</log4j.version>
         <guava.version>32.1.2-jre</guava.version>
         <arrow.version>13.0.0</arrow.version>
+        <parquet.arrow>1.13.1</parquet.arrow>
         <netty.version>4.1.100.Final</netty.version>
     </properties>
 
