--- a/vulpes-runtime/pom.xml
+++ b/vulpes-runtime/pom.xml
@@ -71,5 +71,11 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>net.peng</groupId>
+            <artifactId>vulpes-catalog-arrow-file</artifactId>
+            <version>${parent.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
